force-app/main/default/objects/OA_Opportunity_Signal__c/OA_Opportunity_Signal__c.object-meta.xml
<CustomObject>
    <description>Opportunity Intelligence (Program 2) staging + human-review queue. One row per normalized public opportunity posting (grain = solicitation, NOT a company). Populated read-only from public sources (Grants.gov first). Human-review-gated: nothing flows to a CRM Opportunity, Lead, or outreach without a reviewer. No secrets stored. Dormant by default.</description>
    <label>OA Opportunity Signal</label>
    <nameField>
        <displayFormat>OPP-{00000}</displayFormat>
        <label>Opportunity Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Opportunity Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>