force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Acquisition_Source_Ref__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Source_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquisition Source</label>
    <referenceTo>OA_Acquisition_Source__c</referenceTo>
    <relationshipLabel>Opportunity Signals</relationshipLabel>
    <relationshipName>Opportunity_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>