force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Assistance_Listing__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Listing__c</fullName>
    <description>CFDA / Assistance Listing number(s), comma-joined (grants).</description>
    <label>Assistance Listing</label>
    <length>120</length>
    <type>Text</type>
</CustomField>