force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Canonical_Key__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Key__c</fullName>
    <description>Source-scoped idempotency key (e.g. GRANTS:&lt;opportunityNumber&gt;). External Id + Unique so re-running a fetch UPSERTS rather than duplicating signals.</description>
    <externalId>true</externalId>
    <label>Canonical Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>