force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Capability_Gaps__c.field-meta.xml
<CustomField>
    <fullName>Capability_Gaps__c</fullName>
    <label>Capability Gaps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>