force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Compliance_Decision__c.field-meta.xml
<CustomField><fullName>Compliance_Decision__c</fullName><label>Compliance Decision</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted>
<value><fullName>GO</fullName><default>false</default><label>GO</label></value>
<value><fullName>CONDITIONAL GO</fullName><default>false</default><label>CONDITIONAL GO</label></value>
<value><fullName>NO-GO</fullName><default>false</default><label>NO-GO</label></value>
<value><fullName>REVIEW REQUIRED</fullName><default>true</default><label>REVIEW REQUIRED</label></value>
</valueSetDefinition></valueSet></CustomField>