force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Compliance_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rationale__c</fullName>
    <label>Compliance Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>