force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <description>Source document type (e.g. synopsis, forecast).</description>
    <label>Doc Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>