force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Effort_Score__c.field-meta.xml
<CustomField><fullName>Effort_Score__c</fullName><label>Effort Score</label><type>Number</type><precision>5</precision><scale>1</scale></CustomField>