force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <description>Estimated value / award ceiling when present. Null for Grants.gov list MVP.</description>
    <label>Estimated Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>