force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Evidence_Backed__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Backed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence Backed</label>
    <type>Checkbox</type>
</CustomField>