force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Evidence_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Confidence__c</fullName>
    <label>Evidence Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>