force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Evidence_Count__c.field-meta.xml
<CustomField><fullName>Evidence_Count__c</fullName><label>Evidence Count</label><type>Number</type><precision>4</precision><scale>0</scale></CustomField>