force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Evidence_Summary__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Summary__c</fullName>
    <label>Evidence Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>