force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Fit_Score__c.field-meta.xml
<CustomField><fullName>Fit_Score__c</fullName><label>Fit Score</label><type>Number</type><precision>5</precision><scale>1</scale></CustomField>