force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Investment_Level__c.field-meta.xml
<CustomField>
    <fullName>Investment_Level__c</fullName>
    <label>Investment Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
                <default>true</default>
                <label>LOW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>