force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Investment_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Investment_Rationale__c</fullName>
    <label>Investment Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>