force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Last_Evidence_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Evidence_Date__c</fullName>
    <label>Last Evidence Date</label>
    <type>DateTime</type>
</CustomField>