force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Missing_Requirements__c.field-meta.xml
<CustomField><fullName>Missing_Requirements__c</fullName><label>Missing Requirements</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>