force-app/main/default/objects/OA_Opportunity_Signal__c/fields/NAICS__c.field-meta.xml
<CustomField>
    <fullName>NAICS__c</fullName>
    <description>NAICS code(s), comma-joined. Null for Grants.gov list MVP; populated for SAM Opportunities (Phase 2).</description>
    <label>NAICS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>