force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Source opportunity/solicitation number.</description>
    <label>Opportunity Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>