force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Place_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Performance__c</fullName>
    <description>Place of performance (city, state) from SAM. Null when the source does not provide it.</description>
    <label>Place of Performance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>