force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <description>Date the opportunity was posted/opened.</description>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>