force-app/main/default/objects/OA_Opportunity_Signal__c/fields/PSC__c.field-meta.xml
<CustomField>
    <fullName>PSC__c</fullName>
    <description>Product/Service Code (SAM classificationCode). Used by the Phase-3 scorer. Null when the source does not provide it.</description>
    <label>PSC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>