force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Qualification_Decision__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Decision__c</fullName>
    <label>Qualification Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>GO WITH PARTNER</fullName>
            </value>
            <value>
                <fullName>TEAMING</fullName>
            </value>
            <value>
                <fullName>MONITOR</fullName>
            </value>
            <value>
                <fullName>REVIEW REQUIRED</fullName>
                <default>true</default>
                <label>REVIEW REQUIRED</label>
            </value>
            <value>
                <fullName>NO-GO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>