force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Qualification_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Rationale__c</fullName>
    <label>Qualification Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>