force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Raw_Payload_Ref__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload_Ref__c</fullName>
    <description>Non-PII pointer/reference to the source payload for lineage (e.g. search2 record reference).</description>
    <label>Raw Payload Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>