force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Recommended_Partner__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Partner__c</fullName>
    <label>Recommended Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>