force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Response_Deadline__c</fullName>
    <description>Close/response deadline (review-queue sort key).</description>
    <label>Response Deadline</label>
    <type>Date</type>
</CustomField>