force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <description>Reviewer notes.</description>
    <label>Review Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>