force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Human-review gate. System only ever writes Pending; all other transitions are recorded human actions. Nothing advances to a CRM Opportunity/outreach without a reviewer.</description>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Reviewed</fullName><default>false</default><label>Reviewed</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
            <value><fullName>Promoted</fullName><default>false</default><label>Promoted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>