force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At__c</fullName>
    <description>When a human actioned this signal (blank until reviewed).</description>
    <label>Reviewed At</label>
    <type>DateTime</type>
</CustomField>