force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who actioned this signal (blank until reviewed).</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OA Opportunity Signals</relationshipLabel>
    <relationshipName>OA_Opportunity_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>