force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Sender_Email__c.field-meta.xml
<CustomField><fullName>Sender_Email__c</fullName><label>Sender Email</label><type>Text</type><length>255</length></CustomField>