force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Set_Aside__c.field-meta.xml
<CustomField>
    <fullName>Set_Aside__c</fullName>
    <description>Set-aside type (EDWOSB/WOSB/SB). Null for Grants.gov MVP; populated for SAM (Phase 2).</description>
    <label>Set Aside</label>
    <length>80</length>
    <type>Text</type>
</CustomField>