force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origin public source of this opportunity signal.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Grants.gov</fullName><default>false</default><label>Grants.gov</label></value>
            <value><fullName>SAM.gov</fullName><default>false</default><label>SAM.gov</label></value>
            <value><fullName>SBIR</fullName><default>false</default><label>SBIR</label></value>
            <value><fullName>Federal Register</fullName><default>false</default><label>Federal Register</label></value>
            <value><fullName>Outlook Email</fullName><default>false</default><label>Outlook Email</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>