force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Source_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Run_ID__c</fullName>
    <description>Correlation id of the OA_Connector_Run__c that produced this signal (lineage/reversibility).</description>
    <label>Source Run ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>