force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_Status__c</fullName>
    <description>Raw source lifecycle status (e.g. posted, forecasted, closed, archived).</description>
    <label>Source Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>