force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Opportunity title.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>