force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Opportunity class.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>SBIR</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>