force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Urgency_Score__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Score__c</fullName>
    <label>Urgency Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>