force-app/main/default/objects/OA_Opportunity_Signal__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Canonical link to the source posting.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>