force-app/main/default/objects/OA_Opportunity_Signal__c/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <label>Win Probability</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>